--- a/page2/index.html
+++ b/page2/index.html
@@ -50,20 +50,20 @@
         <h1 class="title">Edit Profile</h1>
         <div class="form-group">
           <div class="name">
-          <label for="firstName" class="gray">First Name</label>
-          <input type="text" id="firstName" name="firstName" value="Sabrina" required>
+            <label for="firstName" class="gray">First Name</label>
+            <input type="text" id="firstName" name="firstName" value="Sabrina" required>
           </div>
           <div class="lastName">
-          <label for="lastName" class="gray">Last Name</label>
-          <input type="text" id="lastName" name="lastName" value="Aryan" required>
+            <label for="lastName" class="gray">Last Name</label>
+            <input type="text" id="lastName" name="lastName" value="Aryan" required>
           </div>
           <div class="username">
-          <label for="username" class="gray">Username</label>
-          <input type="text" id="username" name="username" value="@Sabrina" required>
+            <label for="username" class="gray">Username</label>
+            <input type="text" id="username" name="username" value="@Sabrina" required>
           </div>
           <div class="email">
-          <label for="email" class="gray">Email</label>
-          <input type="email" id="email" name="email" value="@SabrinaAry208@gmailcom" required>
+            <label for="email" class="gray">Email</label>
+            <input type="email" id="email" name="email" value="@SabrinaAry208@gmailcom" required>
           </div>
           <div class="phone">
           <label for="phone" class="gray">Phone Number</label>
@@ -81,8 +81,8 @@
         <div class="form-group-list">
             <div class="form-group-list-birth">
               <label for="birth"></label>
-              <select id="birth" name="birth" >
-                <option value="#" disabled selected hidden class="birth-text">Birth</option>
+              <select id="birth-select" name="birth" class>
+                <option value="" selected disabled>Birth</option>
                 <option value="January">January</option>
                 <option value="February">February</option>
                 <option value="March">March</option>
@@ -101,7 +101,7 @@
             <div class="form-group-list-gender">
                     <label for="gender"></label>
                     <select id="gender" name="gender" required>
-                    <option value="#" disabled selected hidden class="gender-text">Gender</option>
+                    <option value="" selected disabled>Gender</option>
                         <option value="male">Male</option>
                         <option value="female">Female</option>
                         
